2019-07-09  Yannick Moy  <moy@adacore.com>

	* exp_util.adb (Expand_Subtype_From_Expr): Still expand the type
	of static expressions in GNATprove_Mode.
	* sem_ch3.adb (Analyze_Object_Declaration): Remove obsolete
	special case for GNATprove_Mode.

2019-07-09  Piotr Trojanek  <trojanek@adacore.com>

	* doc/gnat_rm/the_gnat_library.rst,
	doc/gnat_ugn/building_executable_programs_with_gnat.rst,
	erroutc.adb, libgnat/g-comlin.adb, libgnat/g-comlin.ads,
	libgnat/g-regexp.ads, libgnat/g-regpat.ads,
	libgnat/g-spipat.ads, libgnat/s-os_lib.ads,
	libgnat/s-regexp.ads: Reword "wild card" to "wildcard".
	* gnat_rm.texi, gnat_ugn.texi: Regenerate.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Check_Expression): Handle correctly implicit
	assignments as part of allocators and (extension) aggregates.
	(Get_Root_Object): Adapt for new path expressions.
	(Is_Path_Expression): Return True for (extension) aggregate.

2019-07-09  Piotr Trojanek  <trojanek@adacore.com>

	* einfo.ads: Fix a typo.

2019-07-09  Ed Schonberg  <schonberg@adacore.com>

	* sem_util.adb (Scope_Within_Or_Same): Handle properly task
	bodies and protected bodies, so that local variables within have
	their proper scopes after these constructs have been rewritten
	during expansion. This patch resembles but is not identical to
	the code in Scope_Within.

2019-07-09  Arnaud Charlet  <charlet@adacore.com>

	* gnat1drv.adb (Adjust_Global_Switches): Set
	Dynamic_Elaboration_Checks to True in CodePeer mode.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Get_Perm_Or_Tree): Issue an error when
	encountering unknown global variable.

2019-07-09  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Check_Expression): Change signature to take an
	Extended_Checking_Mode, for handling read permission checking of
	sub-expressions in an assignment.
	(Check_Parameter_Or_Global): Adapt to new behavior of
	Check_Expression for mode Assign.
	(Check_Safe_Pointers): Do not analyze generic bodies.