@@ -1,5 +1,10 @@
 2019-07-09  Yannick Moy  <moy@adacore.com>
 
+	* freeze.adb (Build_Renamed_Body): Do not set body to inline in
+	GNATprove mode.
+
+2019-07-09  Yannick Moy  <moy@adacore.com>
+
 	* exp_util.adb (Expand_Subtype_From_Expr): Still expand the type
 	of static expressions in GNATprove_Mode.
 	* sem_ch3.adb (Analyze_Object_Declaration): Remove obsolete
